--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "turkish-names",
   "version": "1.0.0",
   "description": "Turkish names db",
-  "main": "names.min.json",
+  "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
     "build": "json-minify names.json > names.min.json"
